syntax = "proto3";

option go_package = "./;discordproto";

service discord {
  rpc SendMsgToChannel (SendMsgToChannelRequest) returns (SendMsgToChannelResponse);

  rpc SendBatchMsgToChannel(SendBatchMsgToChannelRequest) returns (SendBatchMsgToChannelResponse);

  rpc SendMsgToPrivateChannel (SendMsgToPrivateChannelRequest) returns (SendMsgToPrivateChannelResponse);

  rpc ReadUserRoles (ReadUserRolesRequest) returns (ReadUserRolesResponse);

  rpc UpdateUserRoles (UpdateUserRolesRequest) returns (UpdateUserRolesResponse);

  rpc RemoveUserRole (RemoveUserRoleRequest) returns (RemoveUserRoleResponse);

  rpc ReadMessageReactions (ReadMessageReactionsRequest) returns (ReadMessageReactionsResponse);
}

message SendMsgToChannelRequest {
    string channel_id = 1;
    string sender_id = 2;
    string content = 3;
    string idempotency_key = 4;
    bool force = 5;
}

message SendMsgToChannelResponse {}

message SendBatchMsgToChannelRequest {
    string channel_id = 1;
    string sender_id = 2;
    string content = 3;
    string idempotency_key = 4;
    bool force = 5;
    string separator = 6;
}

message SendBatchMsgToChannelResponse {}

message SendMsgToPrivateChannelRequest {
    string user_id = 1;
    string sender_id = 2;
    string content = 3;
    string idempotency_key = 4;
    bool force = 5;
}

message SendMsgToPrivateChannelResponse{}

message Role {
    string role_id = 1;
    string role_name = 2;
}

message ReadUserRolesRequest {
    string user_id = 1;
}

message ReadUserRolesResponse {
    repeated Role roles = 1;
}

message UpdateUserRolesRequest {
    string user_id = 1;
    repeated Role roles = 2;
    bool merge_with_existing = 3;
    string actor_id = 4;
}

message UpdateUserRolesResponse {
    repeated Role roles = 1;
}

message RemoveUserRoleRequest {
    string user_id = 1;
    string actor_id = 2;
    Role role = 3;
}

message RemoveUserRoleResponse {}

message ReadMessageReactionsRequest {
    string message_id = 1;
    string channel_id = 2;
}

message Reaction {
    string reaction_id = 1;
    repeated string user_ids = 2;
}

message ReadMessageReactionsResponse {
    repeated Reaction reactions = 1;
}
